--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -53,8 +53,8 @@
   </main>
 
   <!-- SCRIPTS -->
-  <script src="/js/script.js"></script>
-  <!-- <script src="../../static/js/script.js"></script> -->
+  <script src="/js/login.js"></script>
+  <!-- <script src="../../static/js/login.js"></script> -->
 </body>
 
 </html>
