--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -46,7 +46,7 @@ a {
 }
 
 nav {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   position: relative;
   display: flex;
   justify-content: center;
@@ -60,15 +60,51 @@ nav img {
 
 .user {
   position: absolute;
-  right: 4rem;
+  right: 0;
+  margin-right: 5rem;
 }
 
-.user button {
-  
+.user .avatar {
+  width: 3rem;
+  height: 3rem;
+  background: var(--azul);
+  color: var(--blanco1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .user div {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
 
+.user div a {
+  color: var(--gris-oscuro);
+}
+
+.user div .logout {
+	padding: .3rem 1rem;
+	border: 1px solid var(--verde-oscuro);
+	border-radius: 100px;
+	background: transparent;
+	color: var(--verde-oscuro);
+	font-weight: 500;
+	user-select: none;
+	cursor: pointer;
+}
+
+.user div .logout:hover {
+  border: 1px solid var(--verde-claro);
+	color: var(--verde-claro);
 }
 
 main {
@@ -102,7 +138,8 @@ main a {
 }
 
 main a:hover {
-  background: url(../img/recurso.png) center center/cover no-repeat;
+  background: url(/img/recurso.png) center center/cover no-repeat;
+  /* background: url(../img/recurso.png) center center/cover no-repeat; */
   background-color: var(--gris);
 }
 
