Testeo todas semillas

--- a/src/main/resources/templates/pages/semilla.html
+++ b/src/main/resources/templates/pages/semilla.html
@@ -214,10 +214,10 @@
 
   <!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
   
-  <!-- <script th:inline="javascript">
+  <script th:inline="javascript">
     let seed = [[${seed}]];
     console.log(seed)
-  </script> -->
+  </script>
 </body>
 
 </html>
