--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -15,6 +15,7 @@
   <!-- STYLES -->
   <link href="/css/semillas.css" rel="stylesheet" />
   <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
+  <!-- <link href="/css/datatables.css" rel="stylesheet" /> -->
   
   <!-- GOOGLE ICONS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -47,8 +48,8 @@
       </thead>
 
       <tbody>
-        <tr>
-          <td>Luca Sassaroli</td>
+        <tr th:each="seed : ${seeds}">
+          <td th:text="${seed.personalData.firstName} + ${seed.personalData.lastName}"></td>
           <td>Frontend</td>
           <td>E202304</td>
           <td>Tarde</td>
@@ -69,10 +70,10 @@
 
   <!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
 
-  <!-- <script th:inline="javascript">
+  <script th:inline="javascript">
     let seeds = [[${seeds}]];
     console.log(seeds)
-  </script> -->
+  </script>
 </body>
 
 </html>
