--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -15,14 +15,9 @@
   <!-- STYLES -->
   <link href="/css/semillas.css" rel="stylesheet" />
   <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
-  <!-- <link href="/css/datatables.css" rel="stylesheet" /> -->
   
   <!-- GOOGLE ICONS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-  <!-- DATA TABLES -->
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 </head>
 
 <body>
@@ -35,7 +30,7 @@
 
     <button class="importar-semillas">Importar semillas</button>
 
-    <table id="tabla-semillas" cellspacing="0" cellpadding="0">
+    <table  cellspacing="0" cellpadding="0">
       <thead>
         <tr>
           <th>Nombre</th>
@@ -47,7 +42,7 @@
         </tr>
       </thead>
 
-      <tbody>
+      <tbody id="tabla-semillas">
         <tr th:each="seed : ${seeds}">
           <td th:text="${seed.personalData.firstName} + ${seed.personalData.lastName}"></td>
           <td>Frontend</td>
@@ -56,7 +51,6 @@
           <td>Asignado a proyecto</td>
           <td class="arrow"><a href="#" class="material-symbols-outlined">arrow_right</a></td>
         </tr>
-
       </tbody>
     </table>
     
