--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,3 +1,21 @@
 <nav th:fragment="_nav" class="nav">
-  
+    <a th:href="@{/}"><img src="/img/logo_banner.png" alt="logo_semillero" class="img_logo_nav"></a>
+    <div class="left_container">
+        <div class="links_container">
+            <a th:href="@{/}">Inicio</a>
+            <a th:href="@{/seed/list}" aria-selected="true">Semillas</a>
+            <a th:href="@{/}">Aliados</a>
+            <a th:href="@{/}">Eventos</a>
+        </div>
+        <div class="user">
+            <button data-ripple-light="true" data-popover-target="popover-animation" class="avatar">SJ</button>
+            <div data-popover="popover-animation" data-popover-mount="opacity-100 scale-100"
+                 data-popover-unmount="opacity-0 scale-0 pointer-events-none"
+                 data-popover-transition="transition-all duration-200 origin-bottom"
+                 class="absolute w-max whitespace-normal break-words rounded-lg border border-blue-gray-50 bg-white p-4 font-sans text-sm font-normal text-blue-gray-500 shadow-lg shadow-blue-gray-500/10 focus:outline-none">
+                <a href="#" class="name">Sofia Jason</a>
+                <button class="logout">Cerrar sesión</button>
+            </div>
+        </div>
+    </div>
 </nav>
