--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -15,9 +15,13 @@
   <!-- STYLES -->
   <link href="/css/semillas.css" rel="stylesheet" />
   <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
+  <link href="/css/nav.css" rel="stylesheet" />
   
   <!-- GOOGLE ICONS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <!-- MATERIAL TAILWIND -->
+  <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
 
   <!-- DATA TABLES -->
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
@@ -25,12 +29,12 @@
 </head>
 
 <body>
-  <!-- <nav th:replace=" fragments/nav :: _nav"></nav> -->
-  <nav></nav>
+  <nav th:replace=" fragments/nav :: _nav"></nav>
 
   <main>
 
-    <h1>Semillas</h1>
+    <h1 class="titulo-semillas">Semillas</h1>
+    <hr class="separador">
 
     <button class="importar-semillas">Importar semillas</button>
 
@@ -66,6 +70,10 @@
   <!-- SCRIPTS -->
   <script src="/js/semillas.js"></script>
   <!-- <script src="../../static/js/semillas.js"></script> -->
+
+  <!-- MATERIAL TAILWIND CDN -->
+  <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
+  <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
 
   <!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
 
