--- a/src/main/resources/templates/pages/semillas.html
+++ b/src/main/resources/templates/pages/semillas.html
@@ -12,25 +12,21 @@
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/img/logo.png" />
 
-  <!-- STYLES -->
-  <link href="/css/semillas.css" rel="stylesheet" />
-  <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
-  <link href="/css/nav.css" rel="stylesheet" />
-  
-  <!-- GOOGLE ICONS -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
   <!-- MATERIAL TAILWIND -->
   <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"/>
 
-  <!-- DATA TABLES -->
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+  <!-- STYLES -->
+  <link href="/css/semillas.css" rel="stylesheet" />
+  <link href="/css/nav.css" rel="stylesheet" />
+  <!-- <link href="../../static/css/semillas.css" rel="stylesheet" /> -->
+
+  <!-- GOOGLE ICONS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-  <nav th:replace=" fragments/nav :: _nav"></nav>
 
+  <nav th:replace=" fragments/nav :: _nav"></nav>
   <main>
 
     <h1 class="titulo-semillas">Semillas</h1>
@@ -38,7 +34,7 @@
 
     <button class="importar-semillas">Importar semillas</button>
 
-    <table id="tabla-semillas" cellspacing="0" cellpadding="0">
+    <table  cellspacing="0" cellpadding="0">
       <thead>
         <tr>
           <th>Nombre</th>
@@ -50,16 +46,15 @@
         </tr>
       </thead>
 
-      <tbody>
+      <tbody id="tabla-semillas">
         <tr th:each="seed : ${seeds}">
-          <td th:text="${seed.personalData.firstName} + ${seed.personalData.lastName}"></td>
-          <td>Frontend</td>
-          <td>E202304</td>
-          <td>Tarde</td>
-          <td>Asignado a proyecto</td>
-          <td class="arrow"><a href="#" class="material-symbols-outlined">arrow_right</a></td>
+          <td th:text="${seed.personalData.firstName} + ' ' + ${seed.personalData.lastName}"></td>
+          <td th:text="${seed.postulationData.rol}"></td>
+          <td th:text="${seed.followUp.commission}"></td>
+          <td th:text="${seed.postulationData.turn}"></td>
+          <td th:text="${seed.followUp.status.primary} + ' - ' + ${seed.followUp.status.secondary}"></td>
+          <td class="arrow"><a th:href="@{item/{id}(id=${seed.id})}" class="material-symbols-outlined">arrow_right</a></td>
         </tr>
-
       </tbody>
     </table>
     
